create payment proof and add in the list
